<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E5E5"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2E75B8">
        <Button
            android:id="@+id/btn_RETURN"
            android:layout_width="29dp"
            android:layout_height="wrap_content"
            android:text="@string/re"
            android:textSize="35sp"
            android:layout_marginRight="20dp"
            android:background="#2E75B8" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_setting"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="80dp"
            android:textSize="75sp"
            />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="120dp"
            android:background="#E6E5E5"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:background="#E6E5E5"
                android:text="@string/btn_time"
                android:textColor="#000000"
                android:textSize="65sp" />

            <Button
                android:id="@+id/btn_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:background="#E6E5E5"
                android:text="@string/btn_note"
                android:textColor="#000000"
                android:textSize="65sp" />

            <Button
                android:id="@+id/btn_langunage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:background="#E6E5E5"
                android:text="@string/btn_language"
                android:textColor="#000000"
                android:textSize="65sp" />

            <Button
                android:id="@+id/btn_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:background="#E6E5E5"
                android:text="@string/btn_password"
                android:textColor="#000000"
                android:textSize="65sp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>