<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E75B8"
    >
    <Button
        android:id="@+id/btn_RETURN"
        android:layout_width="29dp"
        android:layout_height="wrap_content"
        android:text="@string/re"
        android:textSize="35sp"
        android:layout_marginRight="20dp"
        android:background="#2E75B8" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_ope"
                android:layout_width="353dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="60dp"
                android:background="#FF7B24"
                android:gravity="center"
                android:text="@string/btn_open"
                android:textColor="#E6E5E5"
                android:textSize="65sp" />

            <Button
                android:id="@+id/btn_clos"
                android:layout_width="353dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:background="#FF7B24"
                android:gravity="center"
                android:text="@string/btn_close"
                android:textColor="#E6E5E5"
                android:textSize="65sp" />

            <Button
                android:id="@+id/btn_sto"
                android:layout_width="353dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:background="#FF7B24"
                android:gravity="center"
                android:text="@string/btn_stop"
                android:textColor="#E6E5E5"
                android:textSize="65sp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>