<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E75B8"
    >
    <Button
        android:id="@+id/btn_RETURN"
        android:layout_width="29dp"
        android:layout_height="wrap_content"
        android:text="@string/re"
        android:textSize="35sp"
        android:layout_marginRight="20dp"
        android:background="#2E75B8" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="353dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:layout_marginLeft="30dp"
                android:background="#FF7B24"
                android:gravity="center"
                android:text="@string/btn_cancel"
                android:textColor="#E6E5E5"
                android:textSize="65sp"
                />
            <Button
                android:id="@+id/btn_new"
                android:layout_width="353dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="30dp"
                android:background="#FF7B24"
                android:gravity="center"
                android:text="@string/btn_new"
                android:textColor="#E6E5E5"
                android:textSize="65sp"
                />
            <Button
                android:id="@+id/btn_forget"
                android:layout_width="353dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="30dp"
                android:background="#FF7B24"
                android:gravity="center"
                android:text="@string/txt_forget"
                android:textColor="#E6E5E5"
                android:textSize="65sp"
                />
        </LinearLayout>
    </ScrollView>
</FrameLayout>