<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E5E5"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="95dp"
        android:background="#E6E5E5"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn_eng"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/logob" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2E75B8">

        <ScrollView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            >
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#2E75B8">
                <Button
                    android:id="@+id/btn_sw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#2E75B8"
                    android:text="@string/btn_switch"
                    android:textColor="#E6E5E5"
                    android:textSize="75sp"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="20dp"
                    />
                <Button
                    android:id="@+id/btn_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#2E75B8"
                    android:text="@string/btn_condition"
                    android:textColor="#E6E5E5"
                    android:textSize="75sp"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="20dp"/>
                <Button
                    android:id="@+id/btn_operate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#2E75B8"
                    android:text="@string/btn_record"
                    android:textColor="#E6E5E5"
                    android:textSize="75sp"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="20dp"/>
                <Button
                    android:id="@+id/btn_set"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#2E75B8"
                    android:text="@string/btn_setting"
                    android:textColor="#E6E5E5"
                    android:textSize="75sp"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="20dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>